adcionado section ja resonsivas

--- a/src/css/barra-navegacao.css
+++ b/src/css/barra-navegacao.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
 }
+
 
 a {
   color: #fff;
@@ -93,6 +96,59 @@ main {
   transition: 0.3s;
 }
 
+.lado1{
+  background-image: url(../img/quemsomos.webp);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
+}
+
+.titulo{
+  font-weight: bold;
+  color: #629530;
+  font-style: italic;
+  font-size: 77px;
+  font-family: 'Lato', sans-serif;
+  margin-top: -10%;
+  text-align: center;
+}
+.titulo, .titulo-sec2 {
+  padding: 20px;
+}
+
+.svg{
+  margin-top: -25%;
+  width: 150px;
+}
+
+.titulo-sec2{
+  font-family: 'Lato', sans-serif;
+  font-size: 30px;
+  letter-spacing: normal;
+  line-height: 1.5;
+  color: rgb(96, 95, 95)
+
+}
+
+.alinhamento-tt{
+  width: 60%;
+}
+
+.margin-grey{
+  background-color: rgb(21, 72, 72);
+  height: 50%;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 
 @media (max-width: 999px){
@@ -123,7 +179,7 @@ main {
 
   .text-main{
     position: absolute;
-    top: 65%;
+    top: 67%;
     left: 20%;
     right: 20%;
     text-align: center;
@@ -155,6 +211,33 @@ main {
   .sub-tt{
     margin-top: 0;
     font-size: 20px;
+  }
+
+  .lado1{
+    width: 100%;
+  }
+
+  .alinhamento-tt{
+    width: 97%;
+  }
+  
+  .titulo{
+    font-size: 42px;
+    text-align: center;
+    margin-top: -15%;
+  }
+
+  .svg{
+    margin-top: -40%;
+    width: 130px;
+  }
+  
+  .rvg2{
+    width: 50px;
+  }
+
+  .margin-grey{
+    height: 15%;
   }
 }
 
