--- a/src/css/barra-navegacao.css
+++ b/src/css/barra-navegacao.css
@@ -6,6 +6,14 @@
 
 }
 
+body {
+	background:
+		url(../imagens/ruido.png),
+		linear-gradient(50deg, #ffffff);
+	background-attachment: fixed;
+	font-family: Helvetica, Arial, sans-serif;
+}
+
 
 a {
   color: #fff;
@@ -13,9 +21,6 @@ a {
   transition: 0.3s;
 }
 
-a:hover {
-  opacity: 0.7;
-}
 
 .logo {
   font-size: 24px;
@@ -172,6 +177,99 @@ main {
   width: 100%;
 }
 
+/* ... Outros estilos ... */
+
+.grid-c {
+  text-align: center;
+  position: relative; /* Adicione isso para posicionar o texto sobre a imagem */
+}
+
+.imagem-container {
+  position: relative;
+}
+
+.imagem-container img {
+  width: 100%;
+  height: auto;
+}
+
+.texto-img {
+  position: absolute;
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  background-color: rgba(255, 255, 255, 0.7); 
+  padding: 10px;
+  border-radius: 5px;
+  width: 80%;
+  font-family: 'Lato', sans-serif; 
+  font-size: 19px; 
+  color: #000;
+  height: 60%;
+  display: flex;
+  align-items: center;
+}
+
+
+
+
+h3 {
+	font-size: 2em;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+}
+
+.col-md-6 {
+	position: relative;
+  width: auto ;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+}
+
+.container {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.row {
+	margin-left: auto;
+	margin-right: auto;
+	justify-content: space-between;
+	display: flex;
+}
+
+
+#servicos {
+	background: white;
+}
+
+#servicos h3 {
+	color: #025825;
+  font-size: 2em;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+	margin-top: 10px;
+}
+
+#servicos h2 {
+	color: #025825;
+  font-size: 3em;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+	margin-top: 10px;
+}
+
+p {
+	text-align: justify;
+	font-size: 1.25em;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #000;
+}
+
 @media (max-width: 999px){
   body {
     overflow-x: hidden;
@@ -276,7 +374,11 @@ main {
     height: 200px;
   }
   .grid-c img{
-    height: 100%;
+    height: 200px;
+  }
+
+  .row{
+    flex-direction: column;
   }
 }
 
