--- a/src/css/barra-navegacao.css
+++ b/src/css/barra-navegacao.css
@@ -138,7 +138,8 @@ main {
   font-size: 30px;
   letter-spacing: normal;
   line-height: 1.5;
-  color: rgb(96, 95, 95)
+  color: rgb(0, 0, 0);
+  font-weight: bold;
 
 }
 
@@ -193,24 +194,35 @@ main {
   height: auto;
 }
 
+
 .texto-img {
   position: absolute;
   top: 50%; 
   left: 50%; 
   transform: translate(-50%, -50%); 
-  background-color: rgba(255, 255, 255, 0.7); 
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
-  width: 80%;
+  width: 85%;
   font-family: 'Lato', sans-serif; 
   font-size: 19px; 
   color: #000;
-  height: 60%;
+  height: auto;
   display: flex;
   align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.texto-img iframe{
+  border-radius: 10px;
 }
 
 
+.titulo-jogos{
+  color: #fff;
+  font-size: 60px;
+}
 
 
 h3 {
@@ -268,6 +280,10 @@ p {
   margin-top: 20px;
   margin-bottom: 20px;
   color: #000;
+}
+
+.ave-kill{
+  margin-bottom: 5%;
 }
 
 @media (max-width: 999px){
@@ -371,15 +387,27 @@ p {
     flex-direction: column;
   }
   .grid-c{
-    height: 200px;
+    height: auto;
   }
   .grid-c img{
-    height: 200px;
+    height: auto;
   }
 
   .row{
     flex-direction: column;
   }
+  .titulo-jogos{
+    font-size: 20px;
+  }
+
+  .titulo-sec2{
+    font-size: 25px;
+  }
+
+  .titulo-sec2{
+    margin-bottom: 250px;
+  }
+
 }
 
 .nav-list.active {
