--- a/src/css/galeria.css
+++ b/src/css/galeria.css
@@ -26,15 +26,27 @@ header h1{
     gap: 2vw;
     padding: 0 2vw;
 }
-.gallery-items{
+.gallery-items {
     width: 340px;
     height: 340px;
     border: 10px solid #FFF;
     box-shadow: 5px 5px 5px #0006;
     flex-grow: 1;
     transition: transform .5s linear;
+    display: inline-block; /* Adicione isso para que os links fiquem lado a lado */
+    margin: 10px; /* Espaçamento entre os links */
+    overflow: hidden; /* Ocultar o overflow para vídeos */
+    text-align: center; /* Alinhar o conteúdo centralmente */
+    text-decoration: none; /* Remover sublinhado do link */
+    color: inherit; /* Herdar a cor do texto padrão */
 }
 .gallery-items img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery-items video {
     width: 100%;
     height: 100%;
     object-fit: cover;
