--- a/src/css/barra-navegacao.css
+++ b/src/css/barra-navegacao.css
@@ -6,12 +6,13 @@
 
 }
 
-body {
+body, html{
 	background:
 		url(../imagens/ruido.png),
 		linear-gradient(50deg, #ffffff);
 	background-attachment: fixed;
 	font-family: Helvetica, Arial, sans-serif;
+  height: 100%;
 }
 
 
@@ -45,7 +46,7 @@ nav {
 main {
   background: url("https://static.wixstatic.com/media/aa095b_52a5d851cdcd422bbf4c61023d2d6ed4~mv2.png/v1/fill/w_1040,h_763,al_c,q_90,enc_auto/aa095b_52a5d851cdcd422bbf4c61023d2d6ed4~mv2.png") no-repeat center center;
   background-size: cover;
-  height: 130vh;
+  height: 140vh;
  
 }
 
@@ -62,16 +63,17 @@ main {
 }
 
 .sub{
-  font-size: 50px;
   display: flex;
   text-align: center;
   justify-content: center;
+  align-items: center;
 }
 
 .sub-tt{
-  margin-top: 10%;
-  font-size: 50px;
+  margin-top: 0;
+  font-size: 40px;
   font-family:Arial, Helvetica, sans-serif ;
+  
 
 }
 
@@ -287,7 +289,9 @@ p {
   margin-bottom: 5%;
 }
 
-@media (max-width: 999px){
+
+/*mobile*/
+@media (max-width: 829px){
   body {
     overflow-x: hidden;
   }
@@ -345,8 +349,153 @@ p {
   }
 
   .sub-tt{
-    margin-top: 0;
     font-size: 20px;
+  }
+
+  .lado1{
+    width: 100%;
+  }
+
+  .alinhamento-tt{
+    width: 97%;
+  }
+  
+  .titulo{
+    font-size: 42px;
+    text-align: center;
+    margin-top: 0;
+  }
+
+  .svg{
+    margin-top: 0;
+    width: 130px;
+  }
+  
+  .rvg2{
+    width: 50px;
+  }
+
+  .margin-grey{
+    height: 15%;
+  }
+
+  .conteiner img{
+    width: 100%;
+    display: none;
+  }
+
+  .grid-container{
+    display: none;
+  }
+  .grid-color{
+    flex-direction: column;
+  }
+  .grid-c{
+    height: auto;
+  }
+  .grid-c img{
+    height: auto;
+  }
+
+  .row{
+    flex-direction: column;
+  }
+  .titulo-jogos{
+    font-size: 20px;
+  }
+
+  .titulo-sec2{
+    font-size: 25px;
+  }
+
+  .titulo-sec2{
+    margin-bottom: 250px;
+  }
+
+}
+
+.nav-list.active {
+  transform: translateX();
+  backdrop-filter:  blur(5px);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+
+
+
+
+
+/*desktop*/
+
+@media (max-width: 999px) and (min-width:830px){
+  body {
+    overflow-x: hidden;
+  }
+  .nav-list {
+    position: absolute;
+    top: 8vh;
+    width: 35vw;
+    height: 92vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+    border: none;
+    font-size: 18px;
+  }
+  .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+    border: none;
+  }
+  .mobile-menu {
+    display: block;
+  }
+
+  .text-main{
+    position: absolute;
+    top: 67%;
+    left: 20%;
+    right: 20%;
+    text-align: center;
+    font-size: 20px;
+    display: block;
+ 
+  }
+
+  .logo{
+    font-size: 20px;
+  }
+
+  .text-main img{
+    position: relative;
+    width: 150px;
+    margin-top: -20%;
+  }
+
+  .sub{
+    font-size: 20px;
+  }
+
+
+
+  main{
+    height: 100vh;
+  }
+
+  .sub-tt{
+    font-size: 30px;
   }
 
   .lado1{
